--- a/src/main/resources/view/StatusBarFooter.fxml
+++ b/src/main/resources/view/StatusBarFooter.fxml
@@ -5,13 +5,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import org.controlsfx.control.StatusBar?>
 
-<GridPane styleClass="grid-pane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="gridPane" styleClass="grid-pane" xmlns="http://javafx.com/javafx/8.0.121"
+          xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
     </columnConstraints>
-    <StatusBar fx:id="syncStatus" styleClass="anchor-pane"/>
+    <StatusBar fx:id="syncStatus" styleClass="anchor-pane" />
     <StatusBar styleClass="anchor-pane" fx:id="totalPersons" GridPane.columnIndex="1"/>
     <StatusBar styleClass="anchor-pane" fx:id="saveLocationStatus" GridPane.columnIndex="2"
                nodeOrientation="RIGHT_TO_LEFT"/>
