--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -43,7 +43,7 @@
   </GridPane>
   <ImageView fx:id="image" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
           <image>
-            <Image url="/images/address_book_32.png"/>
+            <Image url="/images/clock.png"/>
           </image>
   </ImageView>
 </HBox>
