--- a/src/main/resources/view/PersonListCard1.fxml
+++ b/src/main/resources/view/PersonListCard1.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
@@ -40,5 +41,9 @@
          <RowConstraints />
       </rowConstraints>
   </GridPane>
-   <ImageView fx:id="image" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+   <ImageView fx:id="image" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+    <image>
+        <Image url=""/>
+    </image>
+   </ImageView>
 </HBox>
