--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -13,37 +13,73 @@
 <?import javafx.scene.layout.VBox?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
-  <GridPane HBox.hgrow="ALWAYS">
-    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
-    </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
-      <padding>
-        <Insets bottom="5" left="15" right="5" top="5" />
-      </padding>
-      <HBox alignment="CENTER_LEFT" spacing="5">
-        <Label fx:id="id" styleClass="cell_big_label">
-          <minWidth>
-            <!-- Ensures that the label text is never truncated -->
-            <Region fx:constant="USE_PREF_SIZE" />
-          </minWidth>
-        </Label>
-        <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
-      </HBox>
-      <FlowPane fx:id="tags" />
-      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" onMousePressed="#handleAddressClick" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-      <Label fx:id="date" styleClass="cell_small_label" text="\$dateOfBirth" />
-      <Label fx:id="remark" styleClass="cell_small_label" text="\$remark" />
-    </VBox>
-    <rowConstraints>
-      <RowConstraints />
-    </rowConstraints>
-  </GridPane>
-  <ImageView fx:id="image" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-          <image>
+    <GridPane HBox.hgrow="ALWAYS">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
+        </columnConstraints>
+        <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+            <padding>
+                <Insets bottom="5" left="15" right="5" top="5" />
+            </padding>
+            <HBox alignment="CENTER_LEFT" spacing="5">
+                <Label fx:id="id" styleClass="cell_big_label">
+                    <minWidth>
+                        <!-- Ensures that the label text is never truncated -->
+                        <Region fx:constant="USE_PREF_SIZE" />
+                    </minWidth>
+                </Label>
+                <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
+
+            </HBox>
+            <FlowPane fx:id="tags" />
+            <HBox alignment="CENTER_LEFT" spacing="5">
+                <ImageView fx:id="imagePhone" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="/images/phone.png" />
+                    </image>
+                </ImageView>
+                <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
+            </HBox>
+            <HBox alignment="CENTER_LEFT" spacing="5">
+                <ImageView fx:id="imageAddress" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="/images/address.png" />
+                    </image>
+                </ImageView>
+                <Label fx:id="address" onMousePressed="#handleAddressClick" styleClass="cell_small_label" text="\$address" />
+            </HBox>
+            <HBox alignment="CENTER_LEFT" spacing="5">
+                <ImageView fx:id="imageEmail" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="/images/email.png" />
+                    </image>
+                </ImageView>
+                <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+            </HBox>
+            <HBox alignment="CENTER_LEFT" spacing="5">
+                <ImageView fx:id="imageBirth" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="/images/birthday.png" />
+                    </image>
+                </ImageView>
+                <Label fx:id="date" styleClass="cell_small_label" text="\$dateOfBirth" />
+            </HBox>
+            <HBox alignment="CENTER_LEFT" spacing="5">
+                <ImageView fx:id="imageRemark" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="/images/remark.png" />
+                    </image>
+                </ImageView>
+                <Label fx:id="remark" styleClass="cell_small_label" text="\$remark" />
+            </HBox>
+        </VBox>
+        <rowConstraints>
+            <RowConstraints />
+        </rowConstraints>
+    </GridPane>
+    <ImageView fx:id="image" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+        <image>
             <Image url="/images/clock.png" />
-          </image>
-  </ImageView>
+        </image>
+    </ImageView>
 </HBox>
