Can show the Google map by pressing the address icon on the person card

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
@@ -28,7 +28,7 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
-                <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
+                <Label fx:id="name" style="-fx-font-weight: bold;" text="\$first" />
             <padding>
                <Insets top="5.0" />
             </padding>
@@ -53,7 +53,7 @@
             </padding>
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="5">
-                <ImageView fx:id="imageAddress" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="imageAddress" onMousePressed="#handleAddressClick" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="/images/address.png" />
                     </image>
