--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -32,16 +32,13 @@
                                         <Region fx:constant="USE_PREF_SIZE" />
                                     </minWidth>
                                 </Label>
-                                <Label fx:id="name" alignment="BOTTOM_LEFT" text="\$first" styleClass="cell_big_label"/>
+                                <Label fx:id="name" alignment="BOTTOM_LEFT" styleClass="cell_big_label" text="\$first" />
                             </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                         </HBox>
                         <FlowPane fx:id="tags">
-                            <padding>
-                                <Insets top="5.0" />
-                            </padding>
                      <VBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </VBox.margin>
