--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -62,7 +62,7 @@
     </StackPane>
     <VBox fx:id="reminders" maxWidth="340.0" prefWidth="320.0">
       <children>
-        <StackPane fx:id="RemindersPlaceholder" layoutX="20.0" layoutY="20.0" prefHeight="590.0" />
+        <StackPane fx:id="reminderListPlaceholder" layoutX="20.0" layoutY="20.0" prefHeight="590.0" />
       </children>
     </VBox>
   </SplitPane>
