--- a/src/main/resources/view/ReminderListCard.fxml
+++ b/src/main/resources/view/ReminderListCard.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -32,7 +31,7 @@
                                         <Region fx:constant="USE_PREF_SIZE" />
                                     </minWidth>
                                 </Label>
-                                <Label fx:id="about" alignment="BOTTOM_LEFT" text="\$about" styleClass="cell_big_label"/>
+                                <Label fx:id="about" alignment="BOTTOM_LEFT" styleClass="cell_big_label" text="\$about" />
                             </children>
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -68,7 +67,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="5">
 
-                <Label fx:id="date"  styleClass="cell_small_label" text="\$date">
+                <Label fx:id="date" styleClass="cell_small_label" text="\$date">
                     <padding>
                         <Insets top="5.0" />
                     </padding>
