--- a/src/main/resources/view/LoginPage.fxml
+++ b/src/main/resources/view/LoginPage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-      <StackPane VBox.vgrow="ALWAYS" styleClass="pane-with-border" stylesheets="@DarkTheme.css">
+      <StackPane styleClass="pane-with-border" stylesheets="@DarkTheme.css" VBox.vgrow="ALWAYS">
          <children>
             <TextField fx:id="username" alignment="CENTER" onKeyPressed="#handleKeyPress" promptText="username" StackPane.alignment="CENTER">
                <StackPane.margin>
@@ -23,9 +23,17 @@
             </PasswordField>
          </children>
       </StackPane>
-      <StackPane VBox.vgrow="ALWAYS" styleClass="pane-with-border">
+      <StackPane styleClass="pane-with-border" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="loginButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#handleLoginEvent" prefHeight="70.0" prefWidth="235.0" text="Login" textAlignment="CENTER" />
+            <Button fx:id="registerButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#handleRegisterEvent" prefHeight="70.0" prefWidth="159.0" text="Register" textAlignment="CENTER">
+            <StackPane.margin>
+               <Insets left="200.0" />
+            </StackPane.margin></Button>
+         <Button fx:id="loginButton1" alignment="CENTER" layoutX="382.0" layoutY="60.0" mnemonicParsing="false" onMouseClicked="#handleLoginEvent" prefHeight="70.0" prefWidth="159.0" text="Login" textAlignment="CENTER">
+            <StackPane.margin>
+               <Insets right="200.0" />
+            </StackPane.margin>
+         </Button>
          </children>
       </StackPane>
    <stylesheets>
