--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -21,18 +21,18 @@
             <padding>
                 <Insets bottom="5" left="15" right="5" top="5" />
             </padding>
-            <HBox alignment="CENTER_LEFT" prefHeight="71.0" prefWidth="130.0" spacing="5" HBox.hgrow="ALWAYS">
+            <HBox alignment="CENTER_LEFT" prefHeight="71.0" prefWidth="130.0" spacing="5.0" HBox.hgrow="ALWAYS">
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                     <children>
                         <HBox alignment="CENTER_LEFT">
                             <children>
-                                <Label fx:id="id" alignment="BOTTOM_LEFT">
+                                <Label fx:id="id" alignment="BOTTOM_LEFT" styleClass="cell_big_label">
                                     <minWidth>
                                         <!-- Ensures that the label text is never truncated -->
                                         <Region fx:constant="USE_PREF_SIZE" />
                                     </minWidth>
                                 </Label>
-                                <Label fx:id="name" alignment="BOTTOM_LEFT" text="\$first" />
+                                <Label fx:id="name" alignment="BOTTOM_LEFT" styleClass="cell_big_label" text="\$first" />
                             </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -61,7 +61,7 @@
                 </padding>
 
             </HBox>
-            <HBox alignment="CENTER_LEFT" spacing="5">
+            <HBox alignment="CENTER_LEFT" spacing="5.0">
                 <ImageView fx:id="imagePhone" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="/images/phone.png" />
