--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -3,22 +3,22 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+
 <VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
 
   <stylesheets>
-    <URL value="@DarkTheme.css" />
     <URL value="@Extensions.css" />
   </stylesheets>
 
-  <SplitPane id="splitPane" fx:id="splitPaneTop" dividerPositions="0.4" VBox.vgrow="ALWAYS">
-    <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
+  <HBox>
+    <MenuBar fx:id="menuBar" prefHeight="29.0" prefWidth="639.0" VBox.vgrow="NEVER">
       <Menu mnemonicParsing="false" text="File">
         <MenuItem id="logout" mnemonicParsing="false" onAction="#handleLogoutEvent" text="Logout" />
         <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
@@ -27,15 +27,18 @@
         <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
       </Menu>
     </MenuBar>
-    <ButtonBar prefHeight="40.0" prefWidth="20.0">
-      <buttons>
-        <Button onAction="#handleIncreaseFontSize" text="+" wrapText="true" />
-        <Button onAction="#handleDecreaseFontSize" text="-" wrapText="true" />
-      </buttons>
-    </ButtonBar>
-  </SplitPane>
 
-  <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+  <Button onAction="#handleIncreaseFontSize" text="+" wrapText="true">
+         <HBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="2.0" />
+         </HBox.margin></Button>
+        <Button onAction="#handleDecreaseFontSize" text="-" wrapText="true">
+         <HBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="2.0" />
+         </HBox.margin></Button>
+  </HBox>
+
+     <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
     <padding>
       <Insets bottom="5" left="10" right="10" top="5" />
     </padding>
@@ -48,7 +51,7 @@
   </StackPane>
 
   <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
-    <VBox fx:id="personList" minWidth="280" prefWidth="340" SplitPane.resizableWithParent="false">
+    <VBox fx:id="personList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
       <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
       </padding>
@@ -62,6 +65,6 @@
     </StackPane>
   </SplitPane>
 
-  <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
+  <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
 
 </VBox>
