Can change theme in Menu Bar

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -10,61 +10,64 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-
 <VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
 
-  <stylesheets>
-    <URL value="@Extensions.css" />
-  </stylesheets>
+    <stylesheets>
+        <URL value="@Extensions.css"/>
+    </stylesheets>
+    <SplitPane dividerPositions="0.5, 0.5" prefHeight="0.0" prefWidth="690.0">
+        <items>
+            <MenuBar fx:id="menuBar" prefHeight="29.0">
+                <Menu mnemonicParsing="false" text="File">
+                    <MenuItem id="logout" mnemonicParsing="false" onAction="#handleLogoutEvent" text="Logout"/>
+                    <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                    <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Theme">
+                    <MenuItem fx:id="brightTheme" mnemonicParsing="false" onAction="#handleChangeBrightTheme" text="Bright"/>
+                    <MenuItem fx:id="darkTheme" mnemonicParsing="false" onAction="#handleChangeDarkTheme" text="Dark"/>
+                </Menu>
+            </MenuBar>
 
-  <HBox>
-    <MenuBar fx:id="menuBar" prefHeight="29.0" prefWidth="639.0" VBox.vgrow="NEVER">
-      <Menu mnemonicParsing="false" text="File">
-        <MenuItem id="logout" mnemonicParsing="false" onAction="#handleLogoutEvent" text="Logout" />
-        <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-      </Menu>
-      <Menu mnemonicParsing="false" text="Help">
-        <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
-      </Menu>
-    </MenuBar>
+            <Button alignment="TOP_RIGHT" onAction="#handleIncreaseFontSize" text="+" wrapText="true"/>
 
-  <Button onAction="#handleIncreaseFontSize" text="+" wrapText="true">
-         <HBox.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="2.0" />
-         </HBox.margin></Button>
-        <Button onAction="#handleDecreaseFontSize" text="-" wrapText="true">
-         <HBox.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="2.0" />
-         </HBox.margin></Button>
-  </HBox>
+            <Button alignment="TOP_RIGHT" onAction="#handleDecreaseFontSize" text="-"
+                    wrapText="true"/>
+        </items>
+    </SplitPane>
 
-     <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
-    <padding>
-      <Insets bottom="5" left="10" right="10" top="5" />
-    </padding>
-  </StackPane>
+    <HBox/>
 
-  <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
-    <padding>
-      <Insets bottom="5" left="10" right="10" top="5" />
-    </padding>
-  </StackPane>
-
-  <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
-    <VBox fx:id="personList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
-      <padding>
-        <Insets bottom="10" left="10" right="10" top="10" />
-      </padding>
-      <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
-    </VBox>
-
-    <StackPane fx:id="browserPlaceholder" prefWidth="340">
-      <padding>
-        <Insets bottom="10" left="10" right="10" top="10" />
-      </padding>
+    <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+        <padding>
+            <Insets bottom="5" left="10" right="10" top="5"/>
+        </padding>
     </StackPane>
-  </SplitPane>
 
-  <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
+    <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100"
+               styleClass="pane-with-border" VBox.vgrow="NEVER">
+        <padding>
+            <Insets bottom="5" left="10" right="10" top="5"/>
+        </padding>
+    </StackPane>
+
+    <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
+        <VBox fx:id="personList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
+            <padding>
+                <Insets bottom="10" left="10" right="10" top="10"/>
+            </padding>
+            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+        </VBox>
+
+        <StackPane fx:id="browserPlaceholder" prefWidth="340">
+            <padding>
+                <Insets bottom="10" left="10" right="10" top="10"/>
+            </padding>
+        </StackPane>
+    </SplitPane>
+
+    <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
 
 </VBox>
