Update tests, and collate

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -51,6 +51,7 @@
                   <Insets top="5.0" />
                </padding>
                 </VBox>
+                <!-- @@author RonakLakhotia -->
                 <ImageView fx:id="image" fitHeight="100.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="/images/clock.png" />
@@ -59,6 +60,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
                 </ImageView>
+                <!-- @@author  -->
                 <padding>
                     <Insets top="5.0" />
                 </padding>
