--- a/src/main/resources/view/RegisterPage.fxml
+++ b/src/main/resources/view/RegisterPage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-      <StackPane styleClass="pane-with-border" stylesheets="@DarkTheme.css" VBox.vgrow="ALWAYS">
+      <StackPane styleClass="pane-with-border" VBox.vgrow="ALWAYS">
          <children>
             <TextField fx:id="username" alignment="CENTER" onKeyPressed="#handleKeyPress" promptText="username" StackPane.alignment="CENTER">
                <StackPane.margin>
@@ -43,7 +43,6 @@
          </children>
       </StackPane>
    <stylesheets>
-      <URL value="@DarkTheme.css" />
       <URL value="@Extensions.css" />
    </stylesheets>
 </VBox>
