--- a/src/main/resources/view/LoginPage.fxml
+++ b/src/main/resources/view/LoginPage.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!-- @@author yangminxingnus -->
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -39,3 +39,4 @@
          </children>
       </StackPane>
 </VBox>
+<!-- @@author -->
