Update code collation

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -57,7 +57,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
                 </ImageView>
-                <!-- @@author  -->
+                <!-- @@author ChenXiaoman -->
                 <padding>
                     <Insets top="5.0" />
                 </padding>
